--- a/Programming_Practice/Events/index.html
+++ b/Programming_Practice/Events/index.html
@@ -13,10 +13,12 @@
 <body>
 
     <div id="images">
-        <ul>
+        <h1>Here You can remove any Image By Clicking On Img</h1>
+        <ul id="images">
             <li><img src="goku.jpg" alt="" id="blackGoku"></li>
-            <li><img src="wallpapersden.com_beast-goku_1920x1080.jpg" alt="" id="blueGoku" onclick="alert('blue Goku and this is done by onclick attribute')"></li>
-            <li><img src="mansory-audi-rs-7-sportback-2021-3840x2160-6700.jpg" alt="" id="audiRs7"></li>
+            <li><img src="wallpapersden.com_beast-goku_1920x1080.jpg" alt="" id="blueGoku" ></li>
+            <li><img src="mansory-audi-rs-7-sportback-2021-3840x2160-6700.jpg" alt="" id="audiRs7"></li><br>
+            <li><a href="https://www.google.co.in/">Google</a></li>
         </ul>
     </div>
     
