--- a/03_Unlimited_Color/index.html
+++ b/03_Unlimited_Color/index.html
@@ -9,8 +9,10 @@
 <body>
     <h1>Background Color Changer</h1>
     <h2>To change the Color Click on start button</h2>
-    <button id="start">Start</button>
+    <button id="start">Start</button> 
+    &nbsp;&nbsp;
     <button id="stop">Stop</button>
+
+    <script src="main.js"></script>
 </body>
-<script src="main.js"></script>
 </html>
