--- a/05_Rock_Paper_Scissor/index.html
+++ b/05_Rock_Paper_Scissor/index.html
@@ -3,35 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock, Paper, Scissors</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <h1 id="heading">Rock Paper Scissors</h1>
-
-    <div id="pngies">
-        <ul>
-            <li><img src="rock.png" alt=""></li>
-            <li><img src="paper.png" alt=""></li>
-            <li><img src="scissors.png" alt=""></li>
-        </ul>
-    </div>
-
-    <div title="Score Count" >
-        <ul style="padding: 0px 0px 0px 6px;">
-            <li><p class="score"><span id="yourScore" class="countt">0</span><br> you</p></li>
-            <li><p class="score"><span id="compScore" class="countt">0</span><br>Computer</p></li>
-        </ul>  
-    </div>
-
-    <div id="msgBox">
-        <p id="msgBoxText">Pick your move</p><br><br><br>
-        <p id="msgBoxDraw">It was Draw</p><br><br><br>
-        <p id="msgBoxLost">You lost. &nbsp;<span id="explainWhyLoss">msg</span></p><br><br><br>
-        <p id="msgBoxWin">You won! &nbsp;<span id="explainWhyLoss">msg</span></p><br><br><br>
-    </div>
-
-
-    <script src="script.js"></script>
+    
 </body>
 </html>
