--- a/05_Rock_Paper_Scissor/index.html
+++ b/05_Rock_Paper_Scissor/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <div id="heading-container">
+        <h1 id="heading">Rock Paper Scissors</h1>
+    </div>
+
+   <div id="choices-container">
+    <div id="rock" class="choice">
+        <img src="rock.png" alt="">
+    </div>
+    <div id="paper" class="choice">
+        <img src="paper.png" alt="">
+    </div>
+    <div id="scissors" class="choice">
+        <img src="scissors.png" alt="">
+    </div>
+   </div>
+
+   <div id="score-board">
+    <div class="score">
+        <p id="userScore">0</p>
+        <p>You</p>
+    </div>
+    <div class="score">
+        <p id="compScore">0</p>
+        <p>Computer</p>
+    </div>
+   </div>
+
+   <div id="msg-container">
+    <p id="msg">Pick Your Move</p>
+   </div>
+
 </body>
 </html>
