--- a/05_Rock_Paper_Scissor/index.html
+++ b/05_Rock_Paper_Scissor/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -37,5 +38,6 @@
     <p id="msg">Pick Your Move</p>
    </div>
 
+   <script src="script.js"></script>
 </body>
 </html>
