--- a/05_Rock_Paper_Scissor/index.html
+++ b/05_Rock_Paper_Scissor/index.html
@@ -7,11 +7,11 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <div id="heading-container">
+    <div id="heading-container" style="margin-bottom: 2rem;">
         <h1 id="heading">Rock Paper Scissors</h1>
     </div>
 
-   <div id="choices-container">
+   <div id="choices-container" style="margin-bottom: 3rem;">
     <div id="rock" class="choice">
         <img src="rock.png" alt="">
     </div>
@@ -23,18 +23,18 @@
     </div>
    </div>
 
-   <div id="score-board">
+   <div id="score-board-container" style="margin-bottom: 4rem;">
     <div class="score">
         <p id="userScore">0</p>
-        <p>You</p>
+        <p style="margin: 0px;">You</p>
     </div>
     <div class="score">
         <p id="compScore">0</p>
-        <p>Computer</p>
+        <p style="margin: 0px;">Computer</p>
     </div>
    </div>
 
-   <div id="msg-container">
+   <div id="msg-container" style="margin-bottom: 3rem;">
     <p id="msg">Pick Your Move</p>
    </div>
 
