--- a/05_Rock_Paper_Scissor/index.html
+++ b/05_Rock_Paper_Scissor/index.html
@@ -11,6 +11,8 @@
         <h1 id="heading">Rock Paper Scissors</h1>
     </div>
 
+    <p>Choose any one of it.</p>
+
    <div id="choices-container" style="margin-bottom: 3rem;">
     <div id="rock" class="choice">
         <img src="rock.png" alt="">
