--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <p>Explore my work and projects built with HTML, CSS, and JavaScript</p>
     </header>
     <section class="projects">
-        <div class="project" style="background-image: url('/01_BackgroundColor_Change/Background_Color_Changer.jpg');">
+        <div class="project" style="background-image: url('Background_Color_Changer.jpg');">
             <h3>Background Color Changer</h3>
             <p>A simple tool that changes the background color when clicking on different color options.</p>
             <a href="/01_BackgroundColor_Change/index.html" target="_blank">View Project</a>
         </div>
 
-        <div class="project" style="background-image: url('/02_BMI_Calculator/BMI_Calculator.jpg');">
+        <div class="project" style="background-image: url('BMI_Calculator.jpg');">
             <h3>BMI Calculator</h3>
             <p>A web app that calculates BMI using height and weight inputs, displaying the health category.</p>
             <a href="/02_BMI_Calculator/index.html" target="_blank">View Project</a>
         </div>
 
-        <div class="project" style="background-image: url('/03_Unlimited_Color/Auto_BG_Color_Changer.jpg');">
+        <div class="project" style="background-image: url('Auto_BG_Color_Changer.jpg');">
             <h3>Unlimited Color</h3>
             <p>A tool that changes background colors randomly. Click start to begin and stop to freeze the color.</p>
             <a href="/03_Unlimited_Color/index.html" target="_blank">View Project</a>
@@ -38,7 +38,7 @@
             <a href="/03_Unlimited_Color/index.html" target="_blank">View Project</a>
         </div>
 
-        <div class="project" style="background-image: url('/05_Rock_Paper_Scissor/Rock_Paper_Scissor.jpg');">
+        <div class="project" style="background-image: url('Rock_Paper_Scissor.jpg');">
             <h3>Rock Paper Scissors</h3>
             <p>A fun game where you compete against the computer. Pick rock, paper, or scissors to win.</p>
             <a href="/05_Rock_Paper_Scissor/index.html" target="_blank">View Project</a>
