New Project Added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             <a href="/05_Rock_Paper_Scissor/index.html" target="_blank">View Project</a>
         </div>
 
+        <div class="project" style="background-image: url('Digital_Clock.jpg');">
+            <h3>Digital Clock</h3>
+            <p>A simple digital clock displaying real-time hours, minutes, and seconds dynamically.</p>
+            <a href="/06_Digital_Clock/index.html" target="_blank">View Project</a>
+        </div>
+
     </section>
     <footer>
         <p>&copy; 2025 Ritik V. Datey | All Rights Reserved</p>
