--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
         <div class="project" style="background-image: url('Digital_Clock.jpg');">
             <h3>Digital Clock</h3>
-            <p>A simple digital clock displaying real-time hours, minutes, and seconds dynamically.</p>
+            <p>A real-time digital clock displaying hours, minutes, and seconds. Built using JavaScript for accurate
+                time updates</p>
             <a href="/06_Digital_Clock/index.html" target="_blank">View Project</a>
         </div>
 
