--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 
         <div class="project" style="background-image: url('Digital_Clock.jpg');">
             <h3>Digital Clock</h3>
-            <p>A real-time digital clock displaying hours, minutes, and seconds. Built using JavaScript for accurate
-                time updates</p>
+            <p>A simple digital clock that shows hours, minutes, and seconds. Updates dynamically in real-time.</p>
             <a href="/06_Digital_Clock/index.html" target="_blank">View Project</a>
         </div>
 
